fix font size and alignment of sub and sup tags

--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -51,3 +51,11 @@ table {
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
+sub {
+	font-size: smaller;
+	vertical-align: sub;
+}
+sup {
+	font-size: smaller;
+	vertical-align: super;
+}
